<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/strike_date_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_day_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/strike_date_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_month_text"
            android:textSize="15sp" />
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical"
            android:weightSum="1" >

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/default_full_date"
                android:textColor="@color/LightGrey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_company_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/strike_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/default_description" />
        </LinearLayout>
        
        <ImageView
            android:contentDescription="@string/canceled_description"
            android:id="@+id/canceled_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/desconvocada"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>